// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List > List2.vue renders List 1`] = `
<div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-list-card">
  <!--v-if-->
  <!--v-if-->
  <div class="oxd-list-content">
    <div class="oxd-list-content-header">
      <div class="oxd-list-content-header --left"></div>
      <div class="oxd-list-content-header --right"></div>
    </div>
    <div>
      <hr class="oxd-divider-horizontal" role="separator" aria-orientation="horizontal">
      <!--v-if-->
    </div>
    <div class="oxd-list-content-body"></div>
    <!--v-if-->
    <div class="oxd-list-content-footer"></div>
  </div>
</div>
`;

exports[`List > List2.vue renders List with flat top 1`] = `
<div class="oxd-sheet oxd-sheet--rounded oxd-sheet--white oxd-list-card --flat-top">
  <!--v-if-->
  <!--v-if-->
  <div class="oxd-list-content">
    <div class="oxd-list-content-header">
      <div class="oxd-list-content-header --left"></div>
      <div class="oxd-list-content-header --right"></div>
    </div>
    <div>
      <hr class="oxd-divider-horizontal" role="separator" aria-orientation="horizontal">
      <!--v-if-->
    </div>
    <div class="oxd-list-content-body"></div>
    <!--v-if-->
    <div class="oxd-list-content-footer"></div>
  </div>
</div>
`;
